# rs_oj

./: Cargo.toml  README.md  config.json
problem/0/output/: 0  2  3
problem/0/source/: 0.rs  1.rs  2.rs  3.rs
src/: err.rs  main.rs
src/controller/: jobs.rs
src/model/: config.rs  mod.rs  request.rs  response.rs
