[package]
name = "rs_oj"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
sea-orm = { version = "0.10", features = ["sqlx-sqlite", "runtime-actix-native-tls", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0.26", features = ["cargo"] }
wait-timeout = "0.2"
log = "0.4.17"
lazy_static = "1.4.0"
chrono = "0.4.23"
